--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 
 <h1>Welcome to CrissCross's repository</h1>
- <a href="/test/test.html">Test hyperlink</a> 
+ <a href="/crisscross/test/test.html">Test hyperlink</a> 
 </body>
 </html> 
