--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 <title>CrissCross</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
 
-<h1>Welcome to CrissCross's repository</h1>
- <a href="/crisscross/test/test.html">Test hyperlink</a> 
+<h1 style="font-family:arial; text-align:center;">Welcome to CrissCross's repository</h1>
+ <p style="font-family:arial; color:red; text-align:center;">This site is currently under construction</p>
+
+ 
+ 
+ <a href="/crisscross/test/test.html">About Me</a> 
 </body>
 </html> 
