--- a/test/test.html
+++ b/test/test.html
@@ -1,12 +1,12 @@
-ample
 <!DOCTYPE html>
 <html>
 <head>
-<title>CrissCross hyperlink</title>
+<title>About me</title>
 </head>
 <body>
 
-<h1>Hyperlink worked succesfully</h1>
+<h1 style="font-family:arial; text-align:center;">About me</h1>
+<p style="font-family:arial; text-align:center;">I'll add to this later.</p>
 
 
 </body>
