--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
  
  
- <a href="/crisscross/test/test.html">About Me</a> 
+ <a style="font-family:arial;" href="/crisscross/test/test.html">About Me</a> 
 </body>
 </html> 
