--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
 
 
 <h1 style="font-family:arial; text-align:center;">Welcome to the repository directory</h1>
