--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
  
  
- <a style="font-family:arial;" href="/crisscross/test/test.html">About Me</a> 
+ <a style="font-family:arial;" href="/crisscross/test/test.html">About Me</a>
+ 
+ <a style="font-family:arial;" href="/crisscross/repo/repodir.html">Repository</a> 
 </body>
 </html> 
