--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -9,13 +9,13 @@
 <h1 style="font-family:arial; text-align:center;">Welcome to the repository directory</h1>
 
 
-<a href="/crisscross/repo/files/software">Useful software</a>
+<a href="/crisscross/repo/files/software/software.html">Useful software</a>
 <br>
  <br>
-<a href="/crisscross/repo/files/windows">Windows ISOs/IMGs</a>
+<a href="/crisscross/repo/files/windows/windows.html">Windows ISOs/IMGs</a>
 <br>
  <br>
-<a href="/crisscross/repo/files/macos">Assorted MacOS randoms</a>
+<a href="/crisscross/repo/files/macos/macos.html">Assorted MacOS randoms</a>
 <br>
  <br>
  <br>
