--- a/repo/files/windows/windows.html
+++ b/repo/files/windows/windows.html
@@ -1,11 +1,36 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>CrissCross</title>
+<title>CrissCross Windows</title>
 </head>
 <body style="background-color:powderblue;">
 
-<h1 style="font-family:arial; text-align:center;">Windows installs</h1>
+<h1 style="font-family:arial; text-align:center;">Windows OSes</h1>
  
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1JUwf95E9gjdez247r6aSA83Hs19eNSLM&export=download">Windows 1.01</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1bgjM6MTuD1mEJQXAVTYqnQTtR9CqHEU4&export=download">Windows NT 3.1</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1-D8DXKf5nAKrxV4BjhHcSVYGIIMNsvJj&export=download">Windows 95</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1PNKviA5PahS9hazt5JLhe1FHDRGGlO45&export=download">Windows 98</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1YoiN---j7PdhlkkenMkmFff13JHCtcTO&export=download">Windows 2000</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=13GOqm4bPWFcA7SKd-iVZ9XFhCSo_-YWH&export=download">Windows ME</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1Dea2PUkV1b0lOCYPMms_vRN2aa_Eow3O&export=download">Windows XP x64</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1o9r77kkIFnaCIRiY-wMFH2RYVrGfiPWU&export=download">Windows Vista</a>
+ <br>
+ <br>
+<a style="font-family:arial;" href="https://drive.google.com/uc?id=1S77J877eKjOPscbSkrJkaKBxAySffElp&export=download">Windows 7</a>
 </body>
 </html> 
