--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -7,25 +7,25 @@
 
 
 <h1 style="font-family:arial; text-align:center;">Welcome to the repository directory</h1>
+<p style="font-family:arial; color:red; ">Currently the only working downloads are all the windows operating systems. More will be added soon!</p>
 
-
-<a href="/crisscross/repo/files/software/software.html">Useful software</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/software/software.html">Useful software</a>
 <br>
  <br>
-<a href="/crisscross/repo/files/windows/windows.html">Windows ISOs/IMGs</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/windows/windows.html">Windows ISOs/IMGs</a>
 <br>
  <br>
-<a href="/crisscross/repo/files/macos/macos.html">Assorted MacOS randoms</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/macos/macos.html">Assorted MacOS randoms</a>
 <br>
  <br>
  <br>
  <br>
 <p style="font-family:arial; text-align:center;">Some of these files come from other sources. Listed below are where these files come from.</p>
 
-<a href="https://malwarewatch.org/">MalwareWatch.org</a>
+<a style="font-family:arial;" href="https://malwarewatch.org/">MalwareWatch.org</a>
   <br>
   <br>
-<a href="https://winworldpc.com/home">Winworldpc</a>
+<a style="font-family:arial;" href="https://winworldpc.com/home">Winworldpc</a>
 
   
 
