--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>CrissCross repo directory</title>
 </head>
 <body style="background-color:powderblue;">
 
