--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
  
  
- <a style="font-family:arial;" href="/crisscross/test/test.html">About Me</a>
+ <a style="font-family:arial;" href="/test/test.html">About Me</a>
  <br>
  <br>
- <a style="font-family:arial;" href="/crisscross/repo/repodir.html">Repository</a> 
+ <a style="font-family:arial;" href="/repo/repodir.html">Repository</a> 
 </body>
 </html> 
