--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -1,7 +1,8 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>CrissCross repo directory</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>CrissCross repo directory</title>
 </head>
 <body style="background-color:powderblue;">
 
