--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color:powderblue;">
 
 <h1 style="font-family:arial; text-align:center;">Welcome to CrissCross's repository</h1>
- <p style="font-family:arial; color:red; text-align:center;">This site is currently under construction</p>
+ <p style="font-family:arial; color:red; text-align:center;">This site is under construction</p>
 
  
  
