--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
  <br>
  <br>
  <a style="font-family:arial;" href="/repo/repodir.html">Repository</a> 
+ <br>
+ <br>
+ <br>
+  <p style="font-family:arial; colour:#00FFEF; text-align:center;">Rest in peace, Oscar</p>
 </body>
 </html> 
