--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
  
  
- <a style="font-family:arial;" href="/test/test.html">About Me</a>
+ <a style="font-family:arial;" href="test.html">About Me</a>
  <br>
  <br>
- <a style="font-family:arial;" href="/repo/repodir.html">Repository</a> 
+ <a style="font-family:arial;" href="repodir.html">Repository</a> 
 </body>
 </html> 
