--- a/repo/repodir.html
+++ b/repo/repodir.html
@@ -10,13 +10,13 @@
 <h1 style="font-family:arial; text-align:center;">Welcome to the repository directory</h1>
 <p style="font-family:arial; color:red; ">Currently the only working downloads are all the windows operating systems. More will be added soon!</p>
 
-<a style="font-family:arial;" href="/repo/files/software/software.html">Useful software</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/software/software.html">Useful software</a>
 <br>
  <br>
-<a style="font-family:arial;" href="/repo/files/windows/windows.html">Windows ISOs/IMGs</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/windows/windows.html">Windows ISOs/IMGs</a>
 <br>
  <br>
-<a style="font-family:arial;" href="/repo/files/macos/macos.html">Assorted MacOS randoms</a>
+<a style="font-family:arial;" href="/crisscross/repo/files/macos/macos.html">Assorted MacOS randoms</a>
 <br>
  <br>
  <br>
