--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1 style="font-family:arial; text-align:center;">Welcome to CrissCross's repository</h1>
  <p style="font-family:arial; color:red; text-align:center;">This site is under construction</p>
-
+ <p style="font-family:arial; color:black; text-align:center;">Update 9/24: New website design coming soon!</p>
  
  
  <a style="font-family:arial;" href="/test/test.html">About Me</a>
