--- a/madeonamac/CrissCross/Welcome.html
+++ b/madeonamac/CrissCross/Welcome.html
@@ -132,7 +132,7 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id3" style="height: 100px; left: 357px; position: absolute; top: 316px; width: 100px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_100_100" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">crumlin location</p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body"></p>
               </div>
             </div>
           </div>
