--- a/madeonamac/CrissCross/Welcome.html
+++ b/madeonamac/CrissCross/Welcome.html
@@ -138,18 +138,12 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           </div>
           
 
-
+<iframe style="height: 31px; left: 0px; margin-left: -1px; margin-top: 1px; position: absolute; top: 0px; width: 15px; " src="https://www.youtube.com/embed/VnPlTb0UOGA?si=TOapYZZEC1fqMMMu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div style="height: 31px; width: 15px;  height: 31px; left: 400px; position: absolute; top: 360px; width: 13px; z-index: 1; " class="tinyText">
             <div style="position: relative; width: 13px; ">
               <img src="Welcome_files/shapeimage_3.png" alt="" style="height: 31px; left: 0px; margin-left: -1px; margin-top: 1px; position: absolute; top: 0px; width: 15px; " />
             </div>
           </div>
-          <div class="com-apple-iweb-widget-YouTube aboveStrokesAndFrames stroke_0" id="widget3" style="height: 305px; left: 12px; opacity: 1.00; position: absolute; top: 643px; width: 365px; z-index: 1; ">
-            <div id="widget3-youTube" class="youtube_widget"></div>
-          </div>
-          <script type="text/javascript"><!--//--><![CDATA[//><!--
-new YouTubeWidget('widget3', 'Scripts/Widgets/YouTube', 'Scripts/Widgets/SharedResources', '.', {"movieURL": "http:\/\/www.youtube.com\/v\/VnPlTb0UOGA", "lastNormalizedAddress": "http:\/\/www.youtube.com\/watch?v=VnPlTb0UOGA", "address": "http:\/\/www.youtube.com\/watch?v=VnPlTb0UOGA", "showRelatedVideos": true});
-//--><!]]></script>
           <div class="com-apple-iweb-widget-DotMacAlbumOrMovie aboveStrokesAndFrames stroke_0" id="widget4" style="height: 120px; left: 36px; opacity: 1.00; position: absolute; top: 522px; width: 160px; z-index: 1; ">
             <script type="text/javascript"><!--//--><![CDATA[//><!--
     var widget4_htmlMarkupURL = "./$x-html-markup";
